--- a/app/views/spree/checkout/payment/_stripe_sofort.html.erb
+++ b/app/views/spree/checkout/payment/_stripe_sofort.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "sofort.png" %>
+<%= image_tag "https://cdn.klarna.com/1.0/shared/image/generic/badge/de_de/pay_now/descriptive/pink.svg" %>
 <% param_prefix = "payment_source[#{payment_method.id}]" %>
 <%= hidden_field_tag "#{param_prefix}[source]", "sofort" %>
 <%= hidden_field_tag "#{param_prefix}[return_url]", solidus_stripe_sources.return_url(@order.number) %>
